fix rep / claim trackers in afod and bitd so they don't break when the module label wraps

--- a/public/system-assets/afod/styles.css
+++ b/public/system-assets/afod/styles.css
@@ -88,7 +88,7 @@
 
       .claims {
         position: absolute;
-        top: 2.2rem;
+        bottom: 2rem;
         left: 151px;
       }
 
