--- a/public/system-assets/bitd/styles.css
+++ b/public/system-assets/bitd/styles.css
@@ -39,7 +39,7 @@
 
       .turf {
         position: absolute;
-        top: 2rem;
+        bottom: 2rem;
         left: 101px;
       }
 
